; ModuleID = '/home/carl/AnghaBench/linux/drivers/ide/extr_ide-cd_ioctl.c_ide_cdrom_audio_ioctl.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/ide/extr_ide-cd_ioctl.c_ide_cdrom_audio_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.cdrom_device_info = type { i32* }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @ide_cdrom_audio_ioctl(%struct.cdrom_device_info* %0, i32 %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.cdrom_device_info*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i8*, align 8
  %8 = alloca i32*, align 8
  store %struct.cdrom_device_info* %0, %struct.cdrom_device_info** %5, align 8
  store i32 %1, i32* %6, align 4
  store i8* %2, i8** %7, align 8
  %9 = load %struct.cdrom_device_info*, %struct.cdrom_device_info** %5, align 8
  %10 = getelementptr inbounds %struct.cdrom_device_info, %struct.cdrom_device_info* %9, i32 0, i32 0
  %11 = load i32*, i32** %10, align 8
  store i32* %11, i32** %8, align 8
  %12 = load i32, i32* %6, align 4
  switch i32 %12, label %25 [
    i32 130, label %13
    i32 128, label %17
    i32 129, label %21
  ]

13:                                               ; preds = %3
  %14 = load i32*, i32** %8, align 8
  %15 = load i8*, i8** %7, align 8
  %16 = call i32 @ide_cd_fake_play_trkind(i32* %14, i8* %15)
  store i32 %16, i32* %4, align 4
  br label %28

17:                                               ; preds = %3
  %18 = load i32*, i32** %8, align 8
  %19 = load i8*, i8** %7, align 8
  %20 = call i32 @ide_cd_read_tochdr(i32* %18, i8* %19)
  store i32 %20, i32* %4, align 4
  br label %28

21:                                               ; preds = %3
  %22 = load i32*, i32** %8, align 8
  %23 = load i8*, i8** %7, align 8
  %24 = call i32 @ide_cd_read_tocentry(i32* %22, i8* %23)
  store i32 %24, i32* %4, align 4
  br label %28

25:                                               ; preds = %3
  %26 = load i32, i32* @EINVAL, align 4
  %27 = sub nsw i32 0, %26
  store i32 %27, i32* %4, align 4
  br label %28

28:                                               ; preds = %25, %21, %17, %13
  %29 = load i32, i32* %4, align 4
  ret i32 %29
}

declare dso_local i32 @ide_cd_fake_play_trkind(i32*, i8*) #1

declare dso_local i32 @ide_cd_read_tochdr(i32*, i8*) #1

declare dso_local i32 @ide_cd_read_tocentry(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
